20151029_2308_DWDT Further work on entities

--- a/Tests/Fakes/Fakes.csproj
+++ b/Tests/Fakes/Fakes.csproj
@@ -39,8 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Element.cs" />
     <Compile Include="Literal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Dll\Elements\Elements.csproj">
+      <Project>{2c39937a-3681-4cc6-877e-2bf2612026b1}</Project>
+      <Name>Elements</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
