--- a/Dll/Elements/Elements.csproj
+++ b/Dll/Elements/Elements.csproj
@@ -39,7 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Character.cs" />
     <Compile Include="CharacterBuffer.cs" />
+    <Compile Include="Constants\SpecialCharacters.cs" />
+    <Compile Include="Element.cs" />
+    <Compile Include="Enumerations\RepeatType.cs" />
     <Compile Include="Expression.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
