--- a/Tests/ElementsTests/ElementsTests.csproj
+++ b/Tests/ElementsTests/ElementsTests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Tests\ExpressionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\CharacterBufferTests.cs" />
+    <Compile Include="Tests\ElementTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Dll\Elements\Elements.csproj">
