--- a/Dll/Elements/Entities.csproj
+++ b/Dll/Elements/Entities.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{2C39937A-3681-4CC6-877E-2BF2612026B1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Elements</RootNamespace>
-    <AssemblyName>Elements</AssemblyName>
+    <RootNamespace>Entities</RootNamespace>
+    <AssemblyName>Entities</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
