--- a/Tests/UtilitiesTests/UtilitiesTests.csproj
+++ b/Tests/UtilitiesTests/UtilitiesTests.csproj
@@ -55,7 +55,7 @@
     <Compile Include="ExpressionParserTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Dll\Elements\Entities.csproj">
+    <ProjectReference Include="..\..\Dll\Entities\Entities.csproj">
       <Project>{2c39937a-3681-4cc6-877e-2bf2612026b1}</Project>
       <Name>Entities</Name>
     </ProjectReference>
