--- a/Dll/Utilities/Utilities.csproj
+++ b/Dll/Utilities/Utilities.csproj
@@ -49,6 +49,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CharacterDescriptions.resx</DependentUpon>
     </Compile>
+    <Compile Include="Resources\ExceptionMessages.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ExceptionMessages.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Entities\Entities.csproj">
@@ -60,6 +65,10 @@
     <EmbeddedResource Include="Resources\CharacterDescriptions.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>CharacterDescriptions.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\ExceptionMessages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ExceptionMessages.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
