--- a/Dll/Entities/Entities.csproj
+++ b/Dll/Entities/Entities.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Expression.cs" />
     <Compile Include="Group.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubExpression.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
