--- a/Dll/Elements/Elements.csproj
+++ b/Dll/Elements/Elements.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Character.cs" />
     <Compile Include="CharacterBuffer.cs" />
     <Compile Include="CharacterClass.cs" />
+    <Compile Include="Constants\Characters.cs" />
     <Compile Include="CheckState.cs" />
     <Compile Include="Comment.cs" />
     <Compile Include="Conditional.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="ExpressionList.cs" />
     <Compile Include="Group.cs" />
     <Compile Include="NamedClass.cs" />
+    <Compile Include="ParsedCharacterClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegularExpressions\WhiteSpace.cs" />
     <Compile Include="Repeat.cs" />
