--- a/Dll/Utilities/Utilities/Utilities.csproj
+++ b/Dll/Utilities/Utilities/Utilities.csproj
@@ -43,9 +43,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Elements\Elements.csproj">
+    <ProjectReference Include="..\..\Elements\RegularExpressionToText.Elements.csproj">
       <Project>{2c39937a-3681-4cc6-877e-2bf2612026b1}</Project>
-      <Name>Elements</Name>
+      <Name>RegularExpressionToText.Elements</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
