--- a/Tests/UtilitiesTests/UtilitiesTests/UtilitiesTests.csproj
+++ b/Tests/UtilitiesTests/UtilitiesTests/UtilitiesTests.csproj
@@ -54,9 +54,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Dll\Elements\Elements.csproj">
+    <ProjectReference Include="..\..\..\Dll\Elements\RegularExpressionToText.Elements.csproj">
       <Project>{2c39937a-3681-4cc6-877e-2bf2612026b1}</Project>
-      <Name>Elements</Name>
+      <Name>RegularExpressionToText.Elements</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\Dll\Utilities\Utilities\Utilities.csproj">
       <Project>{56251180-f800-4d8c-ad4e-04e78ca0539a}</Project>
